--- a/src/Soenneker.SemanticKernel.Cache.csproj
+++ b/src/Soenneker.SemanticKernel.Cache.csproj
@@ -50,6 +50,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.SemanticKernel" Version="1.51.0" />
         <PackageReference Include="Soenneker.Extensions.Object" Version="3.0.3816" />
-        <PackageReference Include="Soenneker.Utils.SingletonDictionary" Version="3.0.1077" />
+        <PackageReference Include="Soenneker.SemanticKernel.Dtos.Options" Version="3.0.1" />
+        <PackageReference Include="Soenneker.Utils.SingletonDictionary" Version="3.0.1079" />
     </ItemGroup>
 </Project>
