--- a/src/Soenneker.SemanticKernel.Cache.csproj
+++ b/src/Soenneker.SemanticKernel.Cache.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.SemanticKernel.Cache</AssemblyName>
         <PackageId>Soenneker.SemanticKernel.Cache</PackageId>
         <PackageTags>semantickernel cache semantic kernel ai openai instance singleton agent artificial intelligence semantickernelcache util csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
