--- a/test/Soenneker.SemanticKernel.Cache.Tests/Soenneker.SemanticKernel.Cache.Tests.csproj
+++ b/test/Soenneker.SemanticKernel.Cache.Tests/Soenneker.SemanticKernel.Cache.Tests.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
@@ -18,13 +19,7 @@
         </Content>
     </ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-        <PackageReference Include="coverlet.collector" Version="6.0.4">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.SemanticKernel.Connectors.Ollama" Version="1.41.0-alpha" />
+    <ItemGroup><PackageReference Include="Microsoft.SemanticKernel.Connectors.Ollama" Version="1.41.0-alpha" />
         <PackageReference Include="Soenneker.Facts.Local" Version="4.0.551" />
         <PackageReference Include="Soenneker.Utils.Test" Version="4.0.301" />
         <PackageReference Include="Soenneker.Tests.FixturedUnit" Version="4.0.2163" />
@@ -33,6 +28,12 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Soenneker.SemanticKernel.Cache.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="testconfig.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
